changing colors, and page structuring

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="about.html">About</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -42,10 +42,10 @@
                 </a>
             </div>
         </section>
-        <img src="/assets/images/imagem.png" alt="Foto da Joana Santos programando">
+        <img src="/assets/images/image.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Lucas Criado.</p>
+        <p class="rodape">developed by Lucas Criado.</p>
     </footer>
 </body>
 
