--- a/about.html
+++ b/about.html
@@ -11,20 +11,21 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="about.html">About</a>
         </nav>
     </header> 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
+            <h1 class="apresentacao__conteudo__titulo">About</h1>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum officia aut dicta sunt earum eius officiis eligendi tempora. Voluptate repellendus maxime modi neque dicta molestiae asperiores ea corrupti hic quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolore ea ipsum suscipit facere nihil nulla, laudantium magni placeat odio.    
             </p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, harum. Perspiciatis in eius distinctio ducimus aliquam illum nihil ipsam iure animi vero accusantium esse libero dicta, cumque dolorum! Vitae voluptate mollitia pariatur ducimus provident deleniti aspernatur, facere culpa eius neque reprehenderit ea voluptas repudiandae eaque minima facilis corrupti alias in!</p>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, harum. Perspiciatis in eius distinctio ducimus aliquam illum nihil ipsam iure animi vero accusantium esse libero dicta, cumque dolorum! Vitae voluptate mollitia pariatur ducimus provident deleniti aspernatur.</p>
         </section>
-        <img src="/assets/images/imagem.png" alt="Foto da Joana Santos programando">
+        <img src="/assets/images/image.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Lucas Criado.</p>
+        <p class="rodape">developed by Lucas Criado.</p>
     </footer>  
 </body>
 </html>
