--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/syle.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">About</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
         </nav>
     </header> 
     <main class="apresentacao">
@@ -22,7 +22,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, harum. Perspiciatis in eius distinctio ducimus aliquam illum nihil ipsam iure animi vero accusantium esse libero dicta, cumque dolorum! Vitae voluptate mollitia pariatur ducimus provident deleniti aspernatur, facere culpa eius neque reprehenderit ea voluptas repudiandae eaque minima facilis corrupti alias in!</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, harum. Perspiciatis in eius distinctio ducimus aliquam illum nihil ipsam iure animi vero accusantium esse libero dicta, cumque dolorum! Vitae voluptate mollitia pariatur ducimus provident deleniti aspernatur.</p>
         </section>
-        <img src="/assets/images/image.png" alt="Foto da Joana Santos programando">
+        <img src="/assets/images/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
         <p class="rodape">developed by Lucas Criado.</p>
