--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="/assets/css/syle.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">About</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -42,10 +42,10 @@
                 </a>
             </div>
         </section>
-        <img src="/assets/images/image.png" alt="Foto da Joana Santos programando">
+        <img src="/assets/images/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
-        <p class="rodape">developed by Lucas Criado.</p>
+        <p class="rodape">Desenvolvido por Lucas Criado.</p>
     </footer>
 </body>
 
